dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(fast, 0.4.4)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC








LT_INIT





AC_OUTPUT([
Makefile
src/Makefile
include/Makefile
lib/Makefile
app/Makefile
tools/Makefile
lib/libreg/Makefile
lib/librule/Makefile
lib/libua/Makefile
lib/libofp/Makefile
lib/libams/Makefile
app/l2switch/Makefile
app/openflow/Makefile
app/ams/Makefile
app/l3route/Makefile
tools/debug/Makefile
tools/reg_rw/Makefile
tools/rule_rw/Makefile
tools/port_counts/Makefile
tools/port_status/Makefile
tools/ctl_rw/Makefile
tools/mem_rw/Makefile
tools/version/Makefile
tools/ua_fwd/Makefile

])
